* maven based build with master pom and modules * fix various things around java coding conventions * add LICENSE details * new .gitignore entries

--- a/naga/build.xml
+++ b/naga/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="naga" basedir="." default="build">
+<project name="naga" basedir="../" default="build">
 
 	<tstamp/>
 	<property file="version.properties"/>
